--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script> -->
+    <link href='static/css/bootstrap.css' rel='stylesheet' type='text/css'>
 
+    <style>
+        input {
+            font-size: 16px !important
+        }
+    </style>
 </head>
 <body ng-app="app">
 
