--- a/public/html/home.html
+++ b/public/html/home.html
@@ -5,6 +5,12 @@
                 <h1>กิจกรรมทั้งหมด</h1>
             </div>
         </div>
+        
+    </div>
+    <div class="col-sm-8">
+        <div class="page-header float-right">
+            <button type="button" class="btn btn-info" style="margin-top: 20px;" data-toggle="modal" data-target="#myModal">เพิ่ม</button>
+        </div>
     </div>
 </div>
 
@@ -75,9 +81,6 @@
                 </tbody>
                 </table>
             </div>
-
-                <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
             
                 <!-- Modal -->
                 <div class="modal fade" id="myModal" role="dialog">
@@ -105,7 +108,7 @@
                                         <div class="form-group">
                                             <label class="control-label mb-1">เวลาเริ่ม</label>
                                             <div id="datepicker-start" class="input-group date" data-date-format="mm-dd-yyyy">
-                                                <input class="form-control" type="text" readonly style="background-color: #fff" />
+                                                <input class="form-control" type="text" readonly  />
                                                 <span class="input-group-addon"></span>
                                             </div>
                                         </div>
@@ -114,7 +117,7 @@
                                             <div class="form-group">
                                                 <label class="control-label mb-1">เวลาสิ้นสุด</label>
                                                 <div id="datepicker-end" class="input-group date" data-date-format="mm-dd-yyyy">
-                                                    <input class="form-control" type="text" readonly style="background-color: #fff" />
+                                                    <input class="form-control" type="text" readonly  />
                                                     <span class="input-group-addon"></span>
                                                 </div>
                                             </div>
