--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css" rel="stylesheet" type="text/css" />
     <style>
+        body {
+            background-color: #f1f2f7
+        }
+
         input {
             font-size: 16px !important
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body ng-app="app">
 
