--- a/public/html/home.html
+++ b/public/html/home.html
@@ -192,13 +192,13 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <label class="control-label mb-1">ชื่อโครงการ</label>
-                            <input type="text" class="form-control" />
+                            <input type="text" class="form-control" ng-model="activity_name"/>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
                             <label class="control-label mb-1">งบประมาณ</label>
-                            <input type="number" class="form-control" />
+                            <input type="number" class="form-control" ng-model="activity_budget"/>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -208,24 +208,24 @@
                                     <input class="form-control" type="text" readonly  />
                                     <span class="input-group-addon"></span>
                                 </div> -->
-                            <input type="number" class="form-control" />
+                            <input type="number" class="form-control" ng-model="activity_start"/>
                         </div>
                     </div>
                     <div class="col-md-4">
                             <div class="form-group">
                                 <label class="control-label mb-1">เดือนที่สิ้นสุด</label>
-                                <input type="number" class="form-control" />
+                                <input type="number" class="form-control" ng-model="activity_end"/>
                             </div>
                         </div>
                     <div class="col-md-4">
                             <div class="form-group">
                                 <label class="control-label mb-1">รวม (เดือน)</label>
-                                <input type="number" class="form-control" value="4" disabled="true"/>
+                                <input type="number" class="form-control" value="4" disabled="true" ng-value="activity_end - activity_start + 1"/>
                             </div>
                         </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success">เพิ่ม</button>
+                <button type="button" class="btn btn-success" ng-disabled="!add_validation()" ng-click="add_activity()">เพิ่ม</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">ปิด</button>
             </div>
         </div>
