can delete activity

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -55,7 +55,7 @@
                         <td>{{ (activity.disburse * 100 ) / activity.budget  }}</td>
                         <td>
                                 <button type="button" class="btn btn-info">เเก้ไข</button>
-                                <button type="button" class="btn btn-warning">ลบ</button>
+                                <button type="button" class="btn btn-warning" ng-click="del_activity(activity.key)">ลบ</button>
                         </td>
                     </tr>
                 
@@ -109,7 +109,7 @@
                         <td>{{ s_all =  staff.salary * last_month }}</td>
                         <td>
                             <button type="button" class="btn btn-info">เเก้ไข</button>
-                            <button type="button" class="btn btn-warning">ลบ</button>
+                            <button type="button" class="btn btn-warning" >ลบ</button>
                         </td>
                     </tr>
                 </tbody>
