--- a/public/html/home.html
+++ b/public/html/home.html
@@ -106,10 +106,10 @@
                         <td>{{ staff.position }}</td>
                         <td>{{ staff.fullname }}</td>
                         <td>{{ staff.salary  }}</td>
-                        <td>{{ s_all =  staff.salary * last_month }}</td>
+                        <td>{{   staff.salary * last_month }}</td>
                         <td>
                             <button type="button" class="btn btn-info">เเก้ไข</button>
-                            <button type="button" class="btn btn-warning" >ลบ</button>
+                            <button type="button" class="btn btn-warning" ng-click="del_staff(staff.key)" >ลบ</button>
                         </td>
                     </tr>
                 </tbody>
@@ -119,7 +119,7 @@
                         <td></td>
                         <td></td>
                         <td>{{ all_salary }}</td>
-                        <td>{{ all_salary * last_month }}</td>
+                        <td>{{ s_all = all_salary * last_month }}</td>
                         <td></td>
                     </tr>
                 <tfoot>
@@ -253,7 +253,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label class="control-label mb-1">หน่วยงาน</label>
-                                <input type="number" class="form-control" ng-model="staff_department" />
+                                <input type="text" class="form-control" ng-model="staff_department" />
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -268,11 +268,11 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="sel1">ตำเเหน่ง</label>
-                                <select class="form-control" style="font-size: 13px; height: 32px;" ng-show="show_main" ng-model="staff_position">
+                                <select class="form-control" style="font-size: 13px; height: 32px;" ng-show="show_main" ng-model="staff_position" ng-change="position_change()">
                                     <option>หัวหน้าโครงการ</option>
                                     <option>นักวิจัย</option>
                                 </select>
-                                <select class="form-control" style="font-size: 13px; height: 32px;" ng-show="show_support" ng-model="staff_position">
+                                <select class="form-control" style="font-size: 13px; height: 32px;" ng-show="show_support" ng-model="staff_position" ng-change="position_change()">
                                         <option>ผู้ช่วยนักวิจัย</option>
                                         <option>เลขานุการ</option>
                                 </select>
@@ -292,7 +292,7 @@
                         </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-success" ng-disabled="!can_add_staff()">เพิ่ม</button>
+                    <button type="button" class="btn btn-success" ng-disabled="!can_add_staff()" ng-click="add_staff()">เพิ่ม</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">ปิด</button>
                 </div>
             </div>
