change font size skill

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -286,7 +286,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="comment">ทักษะ</label>
-                                <textarea class="form-control" rows="3" ng-model="staff_skill"></textarea>
+                                <textarea class="form-control" style="    font-size: 14px;" rows="3" ng-model="staff_skill"></textarea>
                             </div>
                         </div>
                 </div>
