--- a/public/html/project.html
+++ b/public/html/project.html
@@ -41,7 +41,6 @@
                         <th scope="col">#</th>
                         <td scope="col">วันที่</td>
                         <td scope="col">รายการ</td>
-                        <td scope="col">ประเภท</td>
                         <td scope="col">จำนวนเงิน</td>
                         <td scope="col">หมายเหตุ</td>
                     </tr>
@@ -51,7 +50,6 @@
                         <th scope="row">1</th>
                         <td>10 มกราคม 2580</td>
                         <td>ซื้ออุปกรณ์ (ถังขยะ)</td>
-                        <td>รายจ่าย</td>
                         <td>2500</td>
                         <td>-</td>
                     </tr>
@@ -59,7 +57,6 @@
                         <th scope="row">2</th>
                         <td>12 มกราคม 2580</td>
                         <td>ค่าอาหารสนับสนุน</td>
-                        <td>รายจ่าย</td>
                         <td>12000</td>
                         <td>-</td>
                     </tr>
@@ -67,7 +64,6 @@
                         <th scope="row">3</th>
                         <td>23 มีนาคม 2580</td>
                         <td>รับสปอนเซอร์ จากบริษัทปลาทอง</td>
-                        <td>รายรับ</td>
                         <td>4500</td>
                         <td>-</td>
                     </tr>
@@ -76,47 +72,6 @@
             </div>
         </div>
     </div>
-
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header">
-                <strong class="card-title">ค่าใช้จ่ายมหาวิทยาลัย</strong>
-            </div>
-            <div class="card-body">
-                <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">รายการ</th>
-                        <th scope="col">เปอเซ็น</th>
-                        <th scope="col">จำนวนเงิน</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>มหาวิทยาลัย</td>
-                        <td>10</td>
-                        <td>5200</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>คณะ</td>
-                        <td>2</td>
-                        <td>5240</td>
-                    </tr>
-                    <tr>
-                    <th scope="row">3</th>
-                        <td>ภาค</td>
-                        <td>1</td>
-                        <td>22500</td>
-                    </tr>
-                </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
 
 </div> <!-- .content -->
 
@@ -127,39 +82,36 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">เพิ่มโครงการ</h4>
+                <h4 class="modal-title">เพิ่มกิจกรรมย่อย</h4>
             </div>
             <div class="modal-body">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="control-label mb-1">ชื่อโครงการ</label>
+                            <label class="control-label mb-1">ชื่อกิจกรรมย่อย</label>
                             <input type="text" class="form-control" />
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="control-label mb-1">งบประมาณ</label>
+                            <label class="control-label mb-1">ราคา</label>
                             <input type="number" class="form-control" />
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <div class="form-group">
                             <label class="control-label mb-1">เวลาเริ่ม</label>
-                            <div id="datepicker-start" class="input-group date" data-date-format="mm-dd-yyyy">
+                            <div id="datepicker" class="input-group date" data-date-format="mm-dd-yyyy">
                                 <input class="form-control" type="text" readonly  />
                                 <span class="input-group-addon"></span>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="control-label mb-1">เวลาสิ้นสุด</label>
-                                <div id="datepicker-end" class="input-group date" data-date-format="mm-dd-yyyy">
-                                    <input class="form-control" type="text" readonly  />
-                                    <span class="input-group-addon"></span>
-                                </div>
-                            </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="control-label mb-1">หมายเหตุ</label>
+                            <input type="text" class="form-control" />
                         </div>
+                    </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-success">เพิ่ม</button>
