--- a/public/html/project.html
+++ b/public/html/project.html
@@ -2,7 +2,7 @@
     <div class="col-sm-4">
         <div class="page-header float-left">
             <div class="page-title">
-                <h1>โครงการ กำจัดขยะ</h1>
+                <h1>{{ name }}</h1>
             </div>
         </div>
         
@@ -18,7 +18,7 @@
     <div class="col-md-12">
         <div class="form-group">
             <label class="control-label mb-1">งบประมาณทั้งหมด</label>
-            <input type="number" class="form-control" />
+            <input type="number" class="form-control" ng-model="budget" />
         </div>
     </div>
     <div class="col-md-12">
@@ -46,26 +46,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>10 มกราคม 2580</td>
-                        <td>ซื้ออุปกรณ์ (ถังขยะ)</td>
-                        <td>2500</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>12 มกราคม 2580</td>
-                        <td>ค่าอาหารสนับสนุน</td>
-                        <td>12000</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>23 มีนาคม 2580</td>
-                        <td>รับสปอนเซอร์ จากบริษัทปลาทอง</td>
-                        <td>4500</td>
-                        <td>-</td>
+                    <tr ng-repeat="activity in activities track by $index">
+                        <th scope="row">{{ $index + 1 }}</th>
+                        <td>{{ activity.date }}</td>
+                        <td>{{ activity.name }}</td>
+                        <td>{{ activity.price }}</td>
+                        <td>{{ activity.condition }}</td>
                     </tr>
                 </tbody>
                 </table>
@@ -88,20 +74,20 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <label class="control-label mb-1">ชื่อกิจกรรมย่อย</label>
-                            <input type="text" class="form-control" />
+                            <input type="text" class="form-control" ng-model="new_name" />
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
                             <label class="control-label mb-1">ราคา</label>
-                            <input type="number" class="form-control" />
+                            <input type="number" class="form-control" ng-model="new_price" />
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
                             <label class="control-label mb-1">เวลาเริ่ม</label>
                             <div id="datepicker" class="input-group date" data-date-format="mm-dd-yyyy">
-                                <input class="form-control" type="text" readonly  />
+                                <input class="form-control" type="text" readonly ng-model="new_date"  />
                                 <span class="input-group-addon"></span>
                             </div>
                         </div>
@@ -109,12 +95,12 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <label class="control-label mb-1">หมายเหตุ</label>
-                            <input type="text" class="form-control" />
+                            <input type="text" class="form-control" ng-model="new_condition" />
                         </div>
                     </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success">เพิ่ม</button>
+                <button type="button" class="btn btn-success" ng-click="add_activity()" data-dismiss="modal">เพิ่ม</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">ปิด</button>
             </div>
         </div>
