--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <ul class="nav navbar-nav">
                     <h3 class="menu-title">เมนู</h3><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
-                        <a href="/" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>โครงการ</a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>โครงการ</a>
                     </li>
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>สรุปผล</a>
