shoud disable remaining budget

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -20,7 +20,7 @@
     <div class="col-md-12">
         <div class="form-group">
             <label class="control-label mb-1">งบประมาณโครงการคงเหลือ</label>
-            <input type="number" class="form-control" ng-value="budget_all - a_all - s_all - u_all"/>
+            <input type="number" class="form-control" ng-value="budget_all - a_all - s_all - u_all" ng-disabled="true"/>
         </div>
     </div>
     <div class="col-md-12">
